Fix too much space in /do section before programs

--- a/sass/views/_do.scss
+++ b/sass/views/_do.scss
@@ -254,7 +254,7 @@
 
     #stuff {
         position: absolute;
-        top: 300px;
+        top: 260px;
     }
 
     .programs {
